turmites.lessons.turmites.langton.Langton.scala.error
LangtonsAnt:14: error: expected class or object definition
def setCouleurSol(c:Color) = {
^LangtonsAnt:21: error: expected start of definition
	override def run() { 
                 ^LangtonsAnt:28: error: Unmatched closing brace '}' ignored here
}
^